# obs-input-logger

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json  install-windows.ps1
.github/workflows/: push.yaml  windows-installer.yaml
data/locale/: en-US.ini
installer/: obs-input-logger.iss
src/: hooks-linux.c  hooks-macos.m  hooks-windows.c  input-logger.c  input-logger.h  plugin-main.c  plugin-support.c.in  plugin-support.h
tools/: viewer.html
